# remote-code

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  book.toml  build-docs.sh  config.example.yaml  pyproject.toml  pytest.ini  requirements.txt
.claude/rules/: release.md
.github/workflows/: docs.yml  lint.yml  release.yml
daemon/: package-lock.json  package.json
daemon/src/: message-queue.ts  server.ts  session-pool.ts  skill-manager.ts  types.ts
daemon/tests/: test-health-monitor.ts  test-message-queue.ts  test-types.ts
docs/: README.md  adding-a-discord-bot.md  adding-a-server.md  adding-a-telegram-bot.md  commands-reference.md  getting-started.md
docs/ai/: architecture.md  release-runbook.md
docs/en/: README.md  SUMMARY.md  architecture.md  commands.md  configuration.md  getting-started.md
docs/en/api/: rpc-protocol.md  sse-events.md
docs/en/daemon/: message-queue.md  overview.md  server.md  session-pool.md  skill-manager.md  types.md
docs/en/head/: bot-base.md  bot-discord.md  bot-telegram.md  config.md  main.md  message-formatter.md  overview.md
docs/superpowers/specs/: 2026-03-16-lark-adapter-and-file-forward-design.md
docs/zh/: README.md  SUMMARY.md  architecture.md  commands.md  configuration.md  getting-started.md
docs/zh/api/: rpc-protocol.md  sse-events.md
docs/zh/daemon/: message-queue.md  overview.md  server.md  session-pool.md  skill-manager.md  types.md
docs/zh/head/: bot-base.md  bot-discord.md  bot-telegram.md  config.md  daemon-client.md  main.md  message-formatter.md  overview.md  session-router.md  ssh-manager.md
head/: __init__.py  bot_base.py  bot_discord.py  bot_telegram.py  cli.py  config.py  daemon_client.py  engine.py  file_forward.py  file_pool.py  main.py  message_formatter.py  name_generator.py  session_router.py  ssh_manager.py  token_manager.py
head/platform/: __init__.py  discord_adapter.py  format_utils.py  lark_adapter.py  protocol.py  telegram_adapter.py
head/transport/: ssh.py
head/tui/: __init__.py  app.py  screens.py
scripts/: install.sh  lint.sh
src/: config.rs  main.rs  message_queue.rs  server.rs  session_pool.rs  skill_manager.rs  tls.rs  types.rs
src/daemon/: auth.rs  main.rs  server.rs  session_pool.rs  skill_manager.rs  tls.rs  types.rs
src/daemon/cli_adapter/: claude.rs  codex.rs  gemini.rs  mod.rs  opencode.rs
src/head/: cli.py  daemon_client.py  daemon_installer.py  engine.py  file_forward.py  main.py  message_formatter.py  peer_manager.py  session_router.py  ssh_manager.py
src/head/platform/: discord_adapter.py  lark_adapter.py  protocol.py  telegram_adapter.py
src/head/transport/: ssh.py
src/head/tui/: app.py  screens.py  widgets.py
src/head/webui/: server.py
tests/: conftest.py  test_bot_commands.py  test_cli.py  test_daemon_client.py  test_file_forward.py  test_file_transfer.py  test_lark_adapter.py  test_message_formatter.py  test_multi_cli.py  test_name_generator.py  test_session_router.py  test_ssh_upload.py  test_telegram_adapter.py  test_token_manager.py  test_tool_batching.py  test_transport_http.py  test_transport_ssh.py  test_tui.py
tests/integration/: Dockerfile  README.md  docker-compose.yml  mock-claude.sh  run-tests.sh  test_integration.py  test_multiuser.py
