[package]
name = "codecast-daemon"
version = "0.2.12"
edition = "2021"
description = "Codecast daemon - manages Claude CLI sessions via JSON-RPC over HTTP"

[[bin]]
name = "codecast-daemon"
path = "src/daemon/main.rs"

[dependencies]
axum = { version = "0.8", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
tower-http = { version = "0.6", features = ["cors"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dirs = "6"
axum-server = { version = "0.8", features = ["tls-rustls"] }
rcgen = "0.13"
sha2 = "0.10"
hex = "0.4"
serde_yaml = "0.9"
tokio-stream = "0.1.18"
futures-core = "0.3.32"
futures = "0.3"
subtle = "2"

[target.'cfg(unix)'.dependencies]
nix = { version = "0.31.2", features = ["signal", "process"] }

[profile.release]
opt-level = 3
lto = true
strip = true
