[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "remote-code"
version = "0.2.1"
description = "Bot-based system to interact with Claude CLI on remote machines"
requires-python = ">=3.11"
dependencies = [
    "pyyaml>=6.0",
    "ruamel.yaml>=0.18.0",
    "asyncssh>=2.14.0",
    "aiohttp>=3.9.0",
    "discord.py>=2.3.0",
    "python-telegram-bot>=20.0",
]

[project.scripts]
remote-code = "head.main:cli_main"
