[build-system]
requires = ["setuptools>=68.0", "setuptools-rust>=1.10"]
build-backend = "setuptools.build_meta"

[project]
name = "codecast"
version = "0.2.6"
description = "Bot-based system to interact with Claude CLI on remote machines"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "Chivier Humber" },
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development",
]
dependencies = [
    "pyyaml>=6.0",
    "ruamel.yaml>=0.18.0",
    "asyncssh>=2.14.0",
    "aiohttp>=3.9.0",
    "discord.py>=2.3.0",
    "python-telegram-bot>=20.0",
    "textual>=0.50.0",
    "jinja2>=3.1.0",
]

[project.urls]
Homepage = "https://github.com/Chivier/codecast"
Repository = "https://github.com/Chivier/codecast"
Issues = "https://github.com/Chivier/codecast/issues"

[project.scripts]
codecast = "head.cli:main"

[tool.setuptools.packages.find]
include = ["head*"]

[tool.setuptools.package-data]
"head.bin" = ["codecast-daemon-*"]

[[tool.setuptools-rust.bins]]
target = "codecast-daemon"
args = ["--profile", "release"]

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W"]
ignore = [
    "E501",   # line too long
    "E741",   # ambiguous variable name
    "F401",   # unused imports (many in tests)
    "F541",   # f-string without placeholders
    "F811",   # redefined unused
    "F821",   # undefined name (type annotations)
    "F841",   # unused variable
    "W293",   # blank line whitespace
]
